Cleaning warnings and removed CI script
While I was testing the CI to setup everything I saw 15 warnings with a script error, removed all the warnings and will continue working on the script if necessary on the next PR.

--- a/Chihu.xcodeproj/xcshareddata/xcschemes/ShareExtension.xcscheme
+++ b/Chihu.xcodeproj/xcshareddata/xcschemes/ShareExtension.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1620"
+   LastUpgradeVersion = "1640"
    wasCreatedForAppExtension = "YES"
    version = "2.0">
    <BuildAction
@@ -57,8 +57,12 @@
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "2">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "0"
+         BundleIdentifier = "com.apple.mobilesafari"
+         RemotePath = "/var/containers/Bundle/Application/A7DC5251-9D35-4010-8ACC-C2504C64BB71/MobileSafari.app">
+      </RemoteRunnable>
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "21EFAC1D2C7A7213001DD16D"
@@ -66,7 +70,7 @@
             BlueprintName = "Chihu"
             ReferencedContainer = "container:Chihu.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
