--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -8,37 +8,36 @@ on:
 
 jobs:
   build:
-    name: Build and Test default scheme using any available iPhone simulator
+    name: Build Chihu scheme using any available iPhone simulator
     runs-on: macos-latest
+
+    env:
+      scheme: Chihu
+      platform: iOS Simulator
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Set Default Scheme
+
+      - name: Set variables
+        id: vars
         run: |
-          scheme_list=$(xcodebuild -list -json | tr -d "\n")
-          default=$(echo $scheme_list | ruby -e "require 'json'; puts JSON.parse(STDIN.gets)['project']['targets'][0]")
-          echo $default | cat >default
-          echo Using default scheme: $default
+          device=$(xcrun xctrace list devices 2>&1 | grep -oE 'iPhone.*?[^\(]+' | head -1 | awk '{$1=$1;print}' | sed -e "s/ Simulator$//")
+          if [ "`ls -A | grep -i \\.xcworkspace\$`" ]; then
+            filetype="workspace"
+            file=$(ls -A | grep -i \\.xcworkspace\$ | head -n 1)
+          else
+            filetype="project"
+            file=$(ls -A | grep -i \\.xcodeproj\$ | head -n 1)
+          fi
+          echo "device=$device" >> $GITHUB_OUTPUT
+          echo "filetype=$filetype" >> $GITHUB_OUTPUT
+          echo "file=$file" >> $GITHUB_OUTPUT
+
       - name: Build
-        env:
-          scheme: ${{ 'default' }}
-          platform: ${{ 'iOS Simulator' }}
         run: |
-          # xcrun xctrace returns via stderr, not the expected stdout (see https://developer.apple.com/forums/thread/663959)
-          device=`xcrun xctrace list devices 2>&1 | grep -oE 'iPhone.*?[^\(]+' | head -1 | awk '{$1=$1;print}' | sed -e "s/ Simulator$//"`
-          if [ $scheme = default ]; then scheme=$(cat default); fi
-          if [ "`ls -A | grep -i \\.xcworkspace\$`" ]; then filetype_parameter="workspace" && file_to_build="`ls -A | grep -i \\.xcworkspace\$`"; else filetype_parameter="project" && file_to_build="`ls -A | grep -i \\.xcodeproj\$`"; fi
-          file_to_build=`echo $file_to_build | awk '{$1=$1;print}'`
-          xcodebuild build-for-testing -scheme "$scheme" -"$filetype_parameter" "$file_to_build" -destination "platform=$platform,name=$device"
-      - name: Test
-        env:
-          scheme: ${{ 'default' }}
-          platform: ${{ 'iOS Simulator' }}
-        run: |
-          # xcrun xctrace returns via stderr, not the expected stdout (see https://developer.apple.com/forums/thread/663959)
-          device=`xcrun xctrace list devices 2>&1 | grep -oE 'iPhone.*?[^\(]+' | head -1 | awk '{$1=$1;print}' | sed -e "s/ Simulator$//"`
-          if [ $scheme = default ]; then scheme=$(cat default); fi
-          if [ "`ls -A | grep -i \\.xcworkspace\$`" ]; then filetype_parameter="workspace" && file_to_build="`ls -A | grep -i \\.xcworkspace\$`"; else filetype_parameter="project" && file_to_build="`ls -A | grep -i \\.xcodeproj\$`"; fi
-          file_to_build=`echo $file_to_build | awk '{$1=$1;print}'`
-          xcodebuild test-without-building -scheme "$scheme" -"$filetype_parameter" "$file_to_build" -destination "platform=$platform,name=$device"
+          echo "Building scheme: ${{ env.scheme }} on simulator: ${{ steps.vars.outputs.device }} using ${{ steps.vars.outputs.file }}"
+          xcodebuild build-for-testing \
+            -scheme "${{ env.scheme }}" \
+            -${{ steps.vars.outputs.filetype }} "${{ steps.vars.outputs.file }}" \
+            -destination "platform=${{ env.platform }},name=${{ steps.vars.outputs.device }}"
